Fix menu alignment & add recording indicator icons Fixes a misaligned menu items in Firefox 124. Also adds icons for recording indicators (screen, microphone, camera).

--- a/chrome/global/popup.css
+++ b/chrome/global/popup.css
@@ -691,6 +691,7 @@ panelview .toolbarbutton-1,
 
   menulist > menupopup > menuitem:is([checked="true"], [selected="true"])::before,
   menupopup > menuitem::before,
+  menupopup > menu::before,
   menupopup > menuitem::after {
     display: none !important;
   }
